// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoDetail Component renders Loading when isFetching is true 1`] = `<Loading />`;

exports[`VideoDetail Component renders error when error is defined 1`] = `
<div
  className="error"
>
  Error
</div>
`;

exports[`VideoDetail Component renders properly 1`] = `
<div
  className="video-detail"
>
  <div
    className="video embed-responsive embed-responsive-16by9"
  >
    <iframe
      allow="encrypted-media"
      allowFullScreen={true}
      className="embed-responsive-item"
      frameBorder="0"
      src="https://www.youtube.com/embed/lZoA5ZX4wC0?autoplay=1"
    />
  </div>
  <div
    className="video-details"
  >
    <h4
      className="card-title"
    >
      Ocean Beach Surfing Raw | San…cisco, CA
    </h4>
    <p>
      <VideoViews
        format="numeric"
        viewCount="121659"
      />
    </p>
  </div>
  <div
    className="channel-info"
  >
    <div
      className="media"
    >
      <div
        className="media-body"
      >
        <h5>
          Jeff Chavolla
        </h5>
        <p>
          Published on 
          <t
            ago={false}
            calendar={false}
            date="2017-12-04T07:18:50.000Z"
            decimal={false}
            element="time"
            filter={[Function]}
            format="MMM D, YYYY"
            fromNow={false}
            interval={60000}
            onChange={[Function]}
            toNow={false}
            unit={null}
            unix={false}
            utc={false}
          />
        </p>
        <VideoDescription
          text="Raw surfing video clips of Ocean Beach in San Francisco"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`VideoDetail Component renders properly if any video is not found. 1`] = `
<div
  className="no-result"
>
  Video is not found
</div>
`;
